packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: config_map
---
apiVersion: v1
kind: ConfigMap
data:
  bukkit-config.yml: "settings:\n  allow-end: false\nauto-updater:\n  enabled: false\n\n"
  init-fs.sh: "#!/bin/sh\nset -euo pipefail\nset -o xtrace\n\ncp \"${SHULKER_CONFIG_DIR}/server.properties\" \"${SHULKER_SERVER_CONFIG_DIR}/server.properties\"\nif [ \"${SHULKER_VERSION_CHANNEL}\" == \"Paper\" ] || [ \"${SHULKER_VERSION_CHANNEL}\" == \"Folia\" ] || [ \"${SHULKER_VERSION_CHANNEL}\" == \"Minestom\" ]; then\n  cp \"${SHULKER_CONFIG_DIR}/bukkit-config.yml\" \"${SHULKER_SERVER_CONFIG_DIR}/bukkit.yml\"\n  cp \"${SHULKER_CONFIG_DIR}/spigot-config.yml\" \"${SHULKER_SERVER_CONFIG_DIR}/spigot.yml\"\n  mkdir -p \"${SHULKER_SERVER_CONFIG_DIR}/config\"\n  cp \"${SHULKER_CONFIG_DIR}/paper-global-config.yml\" \"${SHULKER_SERVER_CONFIG_DIR}/config/paper-global.yml\"\nfi\n\nif [ ! -z \"${SERVER_WORLD_URL:-}\" ]; then\n  (cd \"${SHULKER_SERVER_CONFIG_DIR}\" && wget \"${SERVER_WORLD_URL}\" -O - | tar -xzv)\nfi\n\nif [ ! -z \"${SHULKER_SERVER_PLUGIN_URLS:-}\" ]; then\n  mkdir -p \"${SHULKER_SERVER_CONFIG_DIR}/plugins\"\n  for plugin_url in ${SHULKER_SERVER_PLUGIN_URLS//;/ }; do\n    (cd \"${SHULKER_SERVER_CONFIG_DIR}/plugins\" && wget \"${plugin_url}\")\n  done\nfi\n\nif [ ! -z \"${SHULKER_SERVER_PATCH_URLS:-}\" ]; then\n  for patch_url in ${SHULKER_SERVER_PATCH_URLS//;/ }; do\n    (cd \"${SHULKER_SERVER_CONFIG_DIR}\" && wget \"${patch_url}\" -O - | tar -xzv)\n  done\nfi\n"
  paper-global-config.yml: "proxies:\n  bungee-cord:\n    online-mode: false\n  velocity:\n    enabled: true\n    online-mode: true\n    secret: ${CFG_VELOCITY_FORWARDING_SECRET}\n\n"
  server.properties: "allow-nether=true\nenforce-secure-profiles=true\nmax-players=42\nonline-mode=false\nprevent-proxy-connections=false\n"
  spigot-config.yml: "settings:\n  bungeecord: false\n  restart-on-crash: false\nadvancements:\n  disable-saving: true\nplayers:\n  disable-saving: true\nstats:\n  disable-saving: true\nsave-user-cache-on-stop-only: true\n\n"
metadata:
  labels:
    app.kubernetes.io/component: minecraft-server
    app.kubernetes.io/instance: config-my-server
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: config
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
  name: my-server-config
  namespace: default
