packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__tests__update_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: config_map
---
apiVersion: v1
kind: ConfigMap
data:
  bukkit-config.yml: "settings:\n  allow-end: false\nauto-updater:\n  enabled: false\n\n"
  init-fs.sh: "#!/bin/sh\nset -euo pipefail\nset -o xtrace\n\ncp \"${SHULKER_CONFIG_DIR}/server.properties\" \"${SERVER_CONFIG_DIR}/server.properties\"\nif [ \"${TYPE}\" == \"BUKKIT\" ]; then\n  cp \"${SHULKER_CONFIG_DIR}/bukkit-config.yml\" \"${SERVER_CONFIG_DIR}/bukkit.yml\"\nelif [ \"${TYPE}\" == \"SPIGOT\" ]; then\n  cp \"${SHULKER_CONFIG_DIR}/bukkit-config.yml\" \"${SERVER_CONFIG_DIR}/bukkit.yml\"\n  cp \"${SHULKER_CONFIG_DIR}/spigot-config.yml\" \"${SERVER_CONFIG_DIR}/spigot.yml\"\nelif [ \"${TYPE}\" == \"PAPER\" ]; then\n  cp \"${SHULKER_CONFIG_DIR}/bukkit-config.yml\" \"${SERVER_CONFIG_DIR}/bukkit.yml\"\n  cp \"${SHULKER_CONFIG_DIR}/spigot-config.yml\" \"${SERVER_CONFIG_DIR}/spigot.yml\"\n  mkdir -p \"${SERVER_CONFIG_DIR}/config\"\n  cp \"${SHULKER_CONFIG_DIR}/paper-global-config.yml\" \"${SERVER_CONFIG_DIR}/config/paper-global.yml\"\nfi\n\nif [ ! -z \"${SERVER_WORLD_URL+x}\" ]; then\n  (cd \"${SERVER_CONFIG_DIR}\" && wget \"${SERVER_WORLD_URL}\" -O - | tar -xzv)\nfi\n\nmkdir -p \"${SERVER_CONFIG_DIR}/plugins\"\nif [ \"${TYPE}\" == \"PAPER\" ]; then\n  (cd \"${SERVER_CONFIG_DIR}/plugins\" && wget \"${SHULKER_MAVEN_REPOSITORY}/io/shulkermc/shulker-server-agent/${SHULKER_SERVER_AGENT_VERSION}/shulker-server-agent-${SHULKER_SERVER_AGENT_VERSION}-paper.jar\")\nelse\n  echo \"[!] No server agent available for this server type\"\n  exit 1\nfi\n\nif [ ! -z \"${SERVER_PLUGIN_URLS+x}\" ]; then\n  for plugin_url in ${SERVER_PLUGIN_URLS//;/ }; do\n    (cd \"${SERVER_CONFIG_DIR}/plugins\" && wget \"${plugin_url}\")\n  done\nfi\n\nif [ ! -z \"${SERVER_PATCH_URLS+x}\" ]; then\n  for patch_url in ${SERVER_PATCH_URLS//;/ }; do\n    (cd \"${SERVER_CONFIG_DIR}\" && wget \"${patch_url}\" -O - | tar -xzv)\n  done\nfi\n"
  paper-global-config.yml: "proxies:\n  bungee-cord:\n    online-mode: false\n  velocity:\n    enabled: true\n    online-mode: true\n    secret: ${CFG_VELOCITY_FORWARDING_SECRET}\n\n"
  server.properties: "allow-nether=true\nenforce-secure-profiles=true\nmax-players=42\nonline-mode=false\nprevent-proxy-connections=false\n"
  spigot-config.yml: "settings:\n  bungeecord: false\n  restart-on-crash: false\nadvancements:\n  disable-saving: true\nplayers:\n  disable-saving: true\nstats:\n  disable-saving: true\nsave-user-cache-on-stop-only: true\n\n"
metadata:
  labels:
    app.kubernetes.io/component: minecraftserver
    app.kubernetes.io/name: my-server
    minecraftcluster.shulkermc.io/name: my-cluster
  name: my-server-config
  namespace: default

